--- a/Gain/Builds/VisualStudio2019/resources.rc
+++ b/Gain/Builds/VisualStudio2019/resources.rc
@@ -15,6 +15,7 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
+      VALUE "CompanyName",  "JacobCurtis\0"
       VALUE "FileDescription",  "Gain\0"
       VALUE "FileVersion",  "1.0.0\0"
       VALUE "ProductName",  "Gain\0"
